objects/Widget_CSS_Definition__c.object
<CustomObject><fields>
        <fullName>CSS__c</fullName>
        <label>CSS</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Color__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Color</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Widget CSS Definition</label><nameField>
        <label>Widget_Definition Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Widget CSS Definitions</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <columns>CSS__c</columns>
        <columns>Display_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>